fixes css alignment issues on dashboard

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -293,10 +293,10 @@ nav {
     margin: 30px 20px 10px 30px;
     padding: 10px; }
   .dashboard-assignment img {
-    height: 200px;
+    height: 220px;
     object-fit: cover;
     object-position: center;
-    width: 200px; }
+    width: 220px; }
   .dashboard-assignment h2 {
     display: block;
     padding: 35px 30px 10px 0;
@@ -313,7 +313,7 @@ nav {
     box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
     display: inline-block;
     letter-spacing: 2px;
-    margin: 10px 0 30px 20px;
+    margin: 10px 10px 30px 0px;
     padding: 8px 17px; }
 
 .dashboard-assignment:hover {
@@ -323,6 +323,18 @@ nav {
   -o-transform: scale(1.01);
   transform: scale(1.01); }
 
+@media (max-width: 1030px) {
+  .dashboard-assignment h2 {
+    font-size: 20px;
+    padding-bottom: 5px; }
+  .dashboard-assignment p {
+    font-size: 14px;
+    padding-bottom: 5px;
+    padding-top: 5px; }
+  .dashboard-assignment .tag {
+    font-size: 14px;
+    margin-bottom: 35px;
+    margin-top: 5px; } }
 @media (max-width: 880px) {
   .dashboard-assignment {
     min-height: 100px; }
